--- a/dst/css/style.css
+++ b/dst/css/style.css
@@ -4,6 +4,7 @@
 @import url(http://fonts.googleapis.com/css?family=Nobile);
 @import url(http://fonts.googleapis.com/css?family=Gruppo:regular&v1);
 @import url(http://fonts.googleapis.com/css?family=Calligraffitti&v1);
+@import url(http://fonts.googleapis.com/css?family=Pacifico);
 @import url(/css/hashgrid.css);
 
 html,
@@ -15,13 +16,14 @@ body {
 	margin: 0px; 
 	width: 100%;
 	height: 100%;
-	color: black;
+	color: #87410E;
 	background-color: white;
 }
 
 h1,
 h2 {
 	font-family: 'Calligraffitti', arial, serif; 
+	color: #87410E;
 }
 
 h1 {
@@ -30,12 +32,12 @@ h1 {
 }
 
 h2 {
-	font-size: 30px;
+	font-size: 24px;
 	line-height: 40px;
 }
 
 a {
-	color: black;
+	color: #87410E;
 	transition: color;
 	transition-duration: 4000ms;
 	-webkit-transition: color; 
@@ -47,7 +49,7 @@ a {
 }
 
 a:hover {
-	color: brown;
+	color: black;
 	transition: color;
 	transition-duration: 600ms;
 	-webkit-transition: color;
@@ -118,11 +120,12 @@ header {
 
 #center {
 	background-color: brown;
+	background:url(/images/wood-bg1.jpg) no-repeat right center;
 	margin-bottom: 20px;
 }
 
 #main {
-	background:url(/images/cavallo.png) no-repeat left center;
+	background:url(/images/uva.png) no-repeat left center;
 }
 
 #main h2 {
@@ -244,12 +247,11 @@ header {
 #controls {
 	text-align: center;
 	text-transform: uppercase;
-	color: grey;
 }
 
 #controls a {
 	text-decoration: none;
-	color: grey;
+	color: #87410E;
 	transition: color;
 	transition-duration: 2000ms;
 	-webkit-transition: color; 
