--- a/dst/css/style.css
+++ b/dst/css/style.css
@@ -16,7 +16,7 @@ body {
 	margin: 0px; 
 	width: 100%;
 	height: 100%;
-	color: #87410E;
+	color: black;
 	background-color: white;
 }
 
@@ -111,6 +111,7 @@ header {
 
 #contacts {
 	margin-top: 40px;
+	color: #87410E;
 }
 
 #center {
