--- a/dst/css/style.css
+++ b/dst/css/style.css
@@ -121,6 +121,8 @@ header {
 
 #main {
 	background:url(/images/uva.png) no-repeat left center;
+	background:url(/images/cavallo.png) no-repeat left center;
+	background-size: 400px 400px
 }
 
 #main h2 {
