--- a/dst/css/style.css
+++ b/dst/css/style.css
@@ -125,7 +125,7 @@ header {
 
 #center {
 	background-color: brown;
-	background:url(/images/wood-bg1_op.jpg) repeat right center;
+	background:url(/images/wood-bg1_op.jpg) no-repeat center center;
 	margin-bottom: 20px;
 }
 
