--- a/dst/css/style.css
+++ b/dst/css/style.css
@@ -134,9 +134,6 @@ header {
 	background-size: 400px 400px;*/
 }
 
-#main h2 {
-	font-weight: bold;
-}
 
 .horizontalaccordion {
 	background-color: inherit;
@@ -295,6 +292,10 @@ section img.piatti {
 	margin-right:20px;
 	width: 80px;
 	height: 60px;
+}
+
+#page h2 {
+	font-weight: bold;
 }
 
 footer {
